- a classloader can / has to be passed to the mapping engine creation so that we can pass our own classloader - clearing groovy caches when iterating over records, together with explanation